Avoid overflow of dataset resources btn

--- a/ckanext/pigma_theme/fanstatic/pigma_theme.css
+++ b/ckanext/pigma_theme/fanstatic/pigma_theme.css
@@ -292,6 +292,12 @@ h1 {
   text-transform: none;
 }
 
+
+.resource-list .btn {
+  padding: 0.7em 1em;
+}
+
+
 fieldset.checkboxes label input[type=checkbox] {
   width: 1em;
 }
